dist_man1_MANS=

if BUILD_FIXEDCOIND
  dist_man1_MANS+=fixedcoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=fixedcoin-qt.1
endif

if BUILD_FIXEDCOIN_CLI
  dist_man1_MANS+=fixedcoin-cli.1
endif

if BUILD_FIXEDCOIN_TX
  dist_man1_MANS+=fixedcoin-tx.1
endif

if BUILD_FIXEDCOIN_UTIL
  dist_man1_MANS+=fixedcoin-util.1
endif

if ENABLE_WALLET
if BUILD_FIXEDCOIN_WALLET
  dist_man1_MANS+=fixedcoin-wallet.1
endif
endif
